<resources>
    <string name="app_name">A201532028</string>
    <string name="Exam1">Exam1Activity</string>
    <string name="Exam2">Exam2Activity</string>
    <string name="openExam1">Exam1Activity 열기</string>
    <string name="openExam2">Exam2Activity 열기</string>
    <string name="save">저장</string>
    <string name="delete">지우기</string>
    <string name="cat">고양이</string>
    <string name="dog">강아지</string>
    <string name="metro">지하철</string>
    <string name="bus">버스</string>
</resources>
